--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Home.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Home.html
@@ -1,4 +1,9 @@
 <h1 id="homeheader"></h1>
+<br>
+<h2 id="Department"></h2>
+<button id="all_approve" style="width: 20%;display: none;">Check all Forms</button>
+<br>
+<br>
 <button id="form_start_button" style="width: 20%;">New Form</button>
 <br>
 <br>
