--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Login.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Login.html
@@ -1,5 +1,6 @@
-<div class="jumbotron container">
-	<input type="text" id="email" placeholder ="Enter username or email"><br>
+<div class="jumbotron container form-control">
+	<h1 style="color:black">Login Page!</h1>
+	<input type="text" id="email" placeholder ="Enter username"><br>
 	<input type="password" id="pass" placeholder="Enter Password"><br>
 	<button id="login">Log in</button>
 	<p class="danger" id="message"></p>
