--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/form.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/form.html
@@ -1,4 +1,5 @@
-<h1 id=header></h1>
+<div class="jumbotron container form-control">
+<h1 id=header style="color:black"></h1>
 <label>EventStateDate</label>
 <input type="text" id="eventStartDate" placeholder="*ie MMddyyyy"  style="width: 20%;"/>
 
@@ -34,6 +35,5 @@
 <textarea id="comments" rows="2" placeholder="Enter Comments here" cols="48"></textarea>
 <br>
 <input type="Submit" id="formcomplete" value="Submit">
-
-
+</div>
 
