All Monday work

--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/home.html
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/home.html
@@ -7,7 +7,9 @@ Here are your reimbursement forms
 	<thead>
 		<tr>
 			<!-- If there is time, pull the name of the Employee who submitted the Request and add to top -->
-			<th>Form ID</th>
+			<!-- <th>Form ID</th> -->
+			<th>Employee ID</th>
+			<!--<th>Submitter</th> -->
 			<th>Date Submitted</th>
 			<th>Start Date</th>
 			<th>Location</th>
