Some last second work

--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/home.html
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/home.html
@@ -1,7 +1,7 @@
 <h1>
 	Welcome to your Tuition Reimbursement Portal <span id="name"></span>!
 </h1>
-Here are your reimbursement forms
+<span id = "homeMessage" ></span>
 <br />
 <table id="formTable" class="display">
 	<thead>
