adding presentation version

--- a/Joseph_Moses_Code/Week3/TRMS/src/main/webapp/partials/home.html
+++ b/Joseph_Moses_Code/Week3/TRMS/src/main/webapp/partials/home.html
@@ -89,6 +89,6 @@
 				</div>
 			</div>
 		</div>
-		<button id="submitRequest">Submit Request</button>
+		<button class="btn btn-primary" id="submitRequest">Submit Request</button>
 	</div>
 </div>
