review employees' requests

--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/home.html
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/home.html
@@ -5,8 +5,11 @@ Here are your reimbursement requests:
 <table id="reimTable" class="display">
 	<thead>
 		<tr>
-			<th>Id</th>
-			<th>Status</th>
+			<th>Request ID</th>
+			<th>Date Submitted</th>
+			<th>Status ID</th>
+			<th>Total Cost</th>
+			<th>Projected Reimbursement</th>
 		</tr>
 	</thead>
 </table>
