TRMS for presenstation with bug fix

--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
@@ -13,7 +13,7 @@
 
 <div id="attachGrades"></div>
 <div class="container jumbotron">
-	<form>
+	<!-- <form> -->
 		<h1>Reimbursement Request Form</h1>
 		<div class="form-group">
 			<input type="text" class="form-control" id="firstname" readonly>
@@ -52,5 +52,5 @@
 		<input type="text" id="requested-amount" class="form-control" placeholder="Projected Reimbursement" readonly>
 		<br>
 		<button class="btn btn-primary" id="submitReimbursement">Submit</button>
-	</form>
+	<!-- </form> -->
 </div>
