--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/form.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/form.html
@@ -1,7 +1,7 @@
 <div class="jumbotron container form-control">
 <h1 id=header style="color:black"></h1>
 <label>EventStateDate</label>
-<input type="text" id="eventStartDate" placeholder="*ie MMddyyyy"  style="width: 20%;"/>
+<input type="text" id="eventStartDate" placeholder="mmddyyyy"  style="width: 20%;"/>
 
 <label>Location</label>
 <input type="text" id="location" placeholder="Location" style="width: 20%;"/>
