request might work now

--- a/TRMS/WebContent/partials/home.html
+++ b/TRMS/WebContent/partials/home.html
@@ -1,13 +1,21 @@
 <div class = "jumbotron container">
-	<h1>
+	<h2>
 		Hello, <span id="name"></span>
-	</h1>
-	Notifications:
-	<table id="noteTable" class="display">
+	</h2>
+	Your Relevant Requests:
+	<table id="reqTable" class="display">
 		<thead>
 			<tr>
-				<th>From:</th>
-				<th>Subject</th>
+				<th>Reimbursement ID</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+	    		<th>Date of Event</th>
+	    		<th>City</th>
+	    		<th>State</th>
+	    		<th>Cost</th>
+	    		<th>Projected Reimbursement</th>
+	    		<th>Format</th>
+				<th>Approval</th>
 			</tr>
 		</thead>
 	</table>
