--- a/TRMS/WebContent/partials/request.html
+++ b/TRMS/WebContent/partials/request.html
@@ -22,6 +22,6 @@
 		<option value="2">Grade-based</option>
 	</select><br><br>
 
-	<button id="request">Submit Request</button>
+	<button id="submit">Submit Request</button>
 	<br>
 </div>
