--- a/TRMS/WebContent/partials/navbar.html
+++ b/TRMS/WebContent/partials/navbar.html
@@ -13,7 +13,7 @@
         <a class="nav-link" id="home" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="submit" href="#submit">Submit New Reimbursement Request</a>
+        <a class="nav-link" id="submit" href="#">Submit New Request</a>
       </li>
       <li class="nav-item">
       	<a class="nav-link" id="messages" href="#messages">Messages</a>
