last minute changes from today to request to try to make it work. it did not work.

--- a/TRMS/WebContent/partials/request.html
+++ b/TRMS/WebContent/partials/request.html
@@ -20,7 +20,9 @@
 	  	<option selected="selected" disabled>State</option>
 	  	<option value="1">Presentation-based</option>
 		<option value="2">Grade-based</option>
-	</select><br><br>
+	</select><br>
+	
+	<input type="text" id="desc" placeholder="Description"><br><br>
 
 	<button id="submit">Submit Request</button>
 	<br>
