--- a/TRMS/WebContent/partials/navbar.html
+++ b/TRMS/WebContent/partials/navbar.html
@@ -16,10 +16,10 @@
         <a class="nav-link" id="submit" href="#">Submit New Request</a>
       </li>
       <li class="nav-item">
-      	<a class="nav-link" id="messages" href="#messages">Messages</a>
+      	<a class="nav-link" id="messages" href="#">Messages</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="logout" href="#logout">Log Out</a>
+        <a class="nav-link" id="logout" href="#">Log Out</a>
       </li>
     </ul>
   </div>
