--- a/Peter_Chase_Code/Week3/project1/src/main/webapp/partials/event.html
+++ b/Peter_Chase_Code/Week3/project1/src/main/webapp/partials/event.html
@@ -1,103 +1,126 @@
+<br>
 <div class="container">
 	<div class="panel-body inf-content">
 		<div class="row">
-			<div class="col-md-4">
-				<img alt="" style="width: 600px;" title=""
-					class="img-circle img-thumbnail isTooltip"
-					src="https://bootdey.com/img/Content/user-453533-fdadfd.png"
-					data-original-title="Usuario">
-				<h3>Reimbursement</h3>
-				<h5 id="info-balance"></h5>
-			</div>
 			<div class="col-md-6">
-				<h4>Information</h4><br>
+				<button class="btn btn-success btn-apply">Apply</button>
+				<br>
+				<h4 id="evt-title"></h4>
+
+				<br>
 				<div class="table-responsive">
 					<table
 						class="table table-condensed table-responsive table-user-information">
 						<tbody>
 							<tr>
-								<td><strong> <span class="glyphicon glyphicon-asterisk text-primary"></span>
-										ID
+								<td><strong> <span
+										class="glyphicon glyphicon-asterisk text-primary"></span>
+										Course Cost
 								</strong></td>
-								<td id="info-id" class="text-primary"></td>
+								<td class="text-primary info-cost"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-envelope text-primary"></span>
-										Email
+										Reward Amount
 								</strong></td>
-								<td id="info-email" class="text-primary"></td>
+								<td class="text-primary info-amount"></td>
 							</tr>
 
 							<tr>
 								<td><strong> <span
-										class="glyphicon glyphicon-eye-open text-primary"></span> Department
+										class="glyphicon glyphicon-eye-open text-primary"></span>
+										Grading Format
 								</strong></td>
-								<td id="info-dep" class="text-primary"></td>
+								<td class="text-primary info-grad"></td>
+							</tr>
+							<tr>
+								<td><strong> <span
+										class="glyphicon glyphicon-calendar text-primary"></span> Type
+								</strong></td>
+								<td class="text-primary info-type"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										Supervisor
+										Description
 								</strong></td>
-								<td id="info-sup" class="text-primary"></td>
+								<td class="text-primary info-desc"></td>
+							</tr>
+
+							<tr>
+								<td><strong> <span
+										class="glyphicon glyphicon-calendar text-primary"></span>
+										Event Date
+								</strong></td>
+								<td class="text-primary info-date"></td>
+							</tr>
+
+
+							<tr>
+								<td><strong> <span
+										class="glyphicon glyphicon-calendar text-primary"></span>
+										Course Start Date
+								</strong></td>
+								<td class="text-primary info-start"></td>
+							</tr>
+
+							<tr>
+								<td><strong> <span
+										class="glyphicon glyphicon-calendar text-primary"></span>
+										Submission Deadline
+								</strong></td>
+								<td class="text-primary info-dead"></td>
+							</tr>
+
+							<tr>
+								<td><strong> <span
+										class="glyphicon glyphicon-calendar text-primary"></span>
+										Event Country
+								</strong></td>
+								<td class="text-primary info-country"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										Department Head
+										Event City
 								</strong></td>
-								<td id="info-dep-head" class="text-primary"></td>
-							</tr>
-							
-							<tr>
-								<td><strong> <span
-										class="glyphicon glyphicon-calendar text-primary"></span>
-										Country
-								</strong></td>
-								<td id="info-country" class="text-primary"></td>
+								<td class="text-primary info-city"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										City
+										Event Province
 								</strong></td>
-								<td id="info-city" class="text-primary"></td>
+								<td class="text-primary info-province"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										Province
+										Event Postal Code
 								</strong></td>
-								<td id="info-province" class="text-primary"></td>
+								<td class="text-primary info-postal"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										Postal Code
+										Event Address 1
 								</strong></td>
-								<td id="info-postal" class="text-primary"></td>
+								<td class="text-primary info-addr1"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										Address 1
+										Event Address 2
 								</strong></td>
-								<td id="info-addr1" class="text-primary"></td>
+								<td class="text-primary info-addr2"></td>
 							</tr>
 							<tr>
 								<td><strong> <span
 										class="glyphicon glyphicon-calendar text-primary"></span>
-										Address 2
+										Event Phone
 								</strong></td>
-								<td id="info-addr2" class="text-primary"></td>
-							</tr>
-							<tr>
-								<td><strong> <span
-										class="glyphicon glyphicon-calendar text-primary"></span>
-										Phone
-								</strong></td>
-								<td id="info-phone" class="text-primary"></td>
+								<td class="text-primary info-phone"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -106,3 +129,4 @@
 		</div>
 	</div>
 </div>
+<br>
