--- a/Peter_Chase_Code/Week3/project1/src/main/webapp/styles.css
+++ b/Peter_Chase_Code/Week3/project1/src/main/webapp/styles.css
@@ -125,3 +125,9 @@ input::-webkit-input-placeholder {
     background-color: white;
 }
 
+.btn-apply {
+	width: 100px;
+	position: relative;
+	left: 180%;
+	top: 30px;
+}
