--- a/Peter_Chase_Code/Week3/project1/src/main/webapp/partials/navbar.html
+++ b/Peter_Chase_Code/Week3/project1/src/main/webapp/partials/navbar.html
@@ -5,11 +5,18 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul id="nav-btns" class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" id="home" href="">Home
-                    <span class="sr-only">(current)</span>
-                </a>
+                <a class="nav-link" id="btn-home" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="btn-events" href="#">Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="btn-approvals" href="#">Approvals</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="btn-requests" href="#">Requests</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="btn-logout" href="#">Log Out</a>
