--- a/Peter_Chase_Code/Week3/project1/src/main/webapp/partials/register.html
+++ b/Peter_Chase_Code/Week3/project1/src/main/webapp/partials/register.html
@@ -164,7 +164,7 @@
 
 
 			<div class="form-group">
-				<label class="cols-sm-2 control-label">Phone Number</label>
+				<label class="cols-sm-2 control-label">Phone Number (optional)</label>
 				<div class="cols-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i
