--- a/TRMS/WebContent/partials/home.html
+++ b/TRMS/WebContent/partials/home.html
@@ -7,7 +7,7 @@
 		<thead>
 			<tr>
 				<th>Reimbursement ID</th>
-				<th>First Name</th>
+				<!-- <th>First Name</th> -->
 				<th>Last Name</th>
 	    		<th>Date of Event</th>
 	    		<th>City</th>
