--- a/TRMS/WebContent/partials/request.html
+++ b/TRMS/WebContent/partials/request.html
@@ -1,9 +1,62 @@
 <div class="text-center" style="padding:50px 0">
-	<div class="logo">Fill out reimbursement request information</div>
+	<div class="logo">Fill out reimbursement request information here.</div>
 	
-	<input type="date" id="event_date" placeholder="Event Date">
-	<input type="text" id="event_city" placeholder="City"> <br>
-	<input type="text" id="event_state" placeholder="State"> <br>
+	<input type="date" id="event_date" placeholder="Event Date"> <br>
+	<input type="text" id="event_city" placeholder="City">
+	<select id="event_state">
+	  	<option selected="selected" disabled>State</option>
+	  	<option value="Alabama">Alabama</option>
+		<option value="Alaska">Alaska</option>
+		<option value="Arizona">Arizona</option>
+		<option value="Arkansas">Arkansas</option>
+		<option value="California">California</option>
+		<option value="Colorado">Colorado</option>
+		<option value="Conneticut">Connecticut</option>
+		<option value="Delaware">Delaware</option>
+		<option value="Florida">Florida</option>
+		<option value="Georgia">Georgia</option>
+		<option value="Hawaii">Hawaii</option>
+		<option value="Idaho">Idaho</option>
+		<option value="Illinois">Illinois</option>
+		<option value="Indiana">Indiana</option>
+		<option value="Iowa">Iowa</option>
+		<option value="Kansas">Kansas</option>
+		<option value="Kentucky">Kentucky</option>
+		<option value="Louisiana">Louisiana</option>
+		<option value="Maine">Maine</option>
+		<option value="Maryland">Maryland</option>
+		<option value="Massachusetts">Massachusetts</option>
+		<option value="Michigan">Michigan</option>
+		<option value="Minnesota">Minnesota</option>
+		<option value="Mississippi">Mississippi</option>
+		<option value="Missouri">Missouri</option>
+		<option value="Montana">Montana</option>
+		<option value="Nebraska">Nebraska</option>
+		<option value="Nevada">Nevada</option>
+		<option value="New Hampshire">New Hampshire</option>
+		<option value="New Jersey">New Jersey</option>
+		<option value="New Mexico">New Mexico</option>
+		<option value="New York">New York</option>
+		<option value="North Carolina">North Carolina</option>
+		<option value="North Dakota">North Dakota</option>
+		<option value="Ohio">Ohio</option>
+		<option value="Oklahoma">Oklahoma</option>
+		<option value="Oregon">Oregon</option>
+		<option value="Pennsylvania">Pennsylvania</option>
+		<option value="Rhode Island">Rhode Island</option>
+		<option value="South Carolina">South Carolina</option>
+		<option value="South Dakota">South Dakota</option>
+		<option value="Tennessee">Tennessee</option>
+		<option value="Texas">Texas</option>
+		<option value="Utah">Utah</option>
+		<option value="Vermont">Vermont</option>
+		<option value="Virginia">Virginia</option>
+		<option value="Washington">Washington</option>
+		<option value="West Virginia">West Virginia</option>
+		<option value="Wisconsin">Wisconsin</option>
+		<option value="Wyoming">Wyoming</option>
+	</select><br>
+	
 	<input type="number" id="cost" placeholder="Cost of Event"> <br>
 	
 	<select id="event_type">
@@ -14,16 +67,16 @@
 		<option value="4">Certification</option>
 		<option value="5">Technical Training</option>
 		<option value="6">Other</option>
-	</select><br>
+	</select>
 	
 	<select id="format">
-	  	<option selected="selected" disabled>State</option>
+	  	<option selected="selected" disabled>Event Format</option>
 	  	<option value="1">Presentation-based</option>
 		<option value="2">Grade-based</option>
 	</select><br>
 	
 	<input type="text" id="desc" placeholder="Description"><br><br>
 
-	<button id="submit">Submit Request</button>
+	<button id="submit" >Submit Request</button>
 	<br>
 </div>
