--- a/TRMS/WebContent/partials/login.html
+++ b/TRMS/WebContent/partials/login.html
@@ -1,7 +1,7 @@
 <!-- LOGIN FORM -->
 
 <div class="text-center" style="padding:50px 0">
-	<div class="logo">Tuition Reimbursement Management System</div>
+	<div class="logo">Tuition Reimbursement Management System 1</div>
 	<!-- Main Form -->
 	<h2>Login/Registration Page</h2>
 	<input type="text" id="email" placeholder="username/email"><br>
