--- a/Thomas_Hemming_Code/Week3/TRMS/trms/src/main/webapp/partials/navbar.html
+++ b/Thomas_Hemming_Code/Week3/TRMS/trms/src/main/webapp/partials/navbar.html
@@ -5,18 +5,21 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <!--  <li class="nav-item active">
+      <li class="nav-item active">
         <a class="nav-link" id="home" href="#">Home<span class="sr-only">(current)</span></a>
-      </li>  -->
+      </li>
       <!-- <li class="nav-item">
         <a class="nav-link" id="reimbursements" href="#">Reimbursements</a>
       </li> -->
       <li class="nav-item">
         <a class="nav-link" id="events" href="#">Events</a>
       </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" id="approvals" href="#">Approvals</a>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link" id="logout" href="#">Log Out</a>
-      </li>
+      </li> 
     </ul>
   </div>
 </nav>
